attempted a fix due the site not appearing properly on smaller screens

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -35,16 +35,12 @@ p {
 
 body {
   width: 100%;
-  height: 100vh;
-  overflow-y: scroll;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: url('../images/background.jpg') no-repeat;
-  background-size: cover;
 }
 
 .container {
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px;
   max-width: 680px;
 }
